:hammer: done with dm1

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,7 @@ labs/lab1/__MACOSX/
 labs/lab1/Data/
 labs/lab1/Figs/
 labs/lab1/Images/
+dm/HM1_2024_2025/Lab_note_2020_2021/Figs
+dm/HM1_2024_2025/Lab_note_2020_2021/Data
+dm/HM1_2024_2025/Lab_note_2020_2021/Images
+dm/HM1_2024_2025/__MACOSX
